overflow fix

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -152,6 +152,9 @@
         
     }
     
+    body {
+        overflow-x: hidden;
+    }
       
 
 }
